sratom (0.4.9) unstable;

  * Support sequences with beat time stamps
  * Fix warnings when building with ISO C++ compilers
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Tue, 15 Mar 2016 17:57:49 -0400

sratom (0.4.6) stable;

  * Update for latest LV2 Atom Object simplification
  * Don't set eg prefix in sratom_to_turtle
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:14:19 -0400

sratom (0.4.4) stable;

  * Escape invalid characters when writing paths as URIs
  * Fancier printing without subject and predicate

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:09:33 -0500

sratom (0.4.2) stable;

  * Fix serialisation of nested tuples
  * Fix memory leaks
  * Use new sord API to clean up and shrink code
  * Disable timestamps in HTML documentation for reproducible build
  * Update to waf 1.7.9 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Mon, 18 Feb 2013 11:17:01 -0500

sratom (0.4.0) stable;

  * Correctly read objects with several rdf:type properties
  * Support writing Object Atoms as top level descriptions if subject and
    predicate are not given.
  * Fix various hyper-strict warnings
  * Upgrade to waf 1.7.2

 -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 01:11:07 -0400

sratom (0.2.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Wed, 18 Apr 2012 15:14:11 -0400