@@ -8,7 +8,7 @@ import waflib.extras.autowaf as autowaf
 # major increment <=> incompatible changes
 # minor increment <=> compatible changes (additions)
 # micro increment <=> no interface changes
-SRATOM_VERSION       = '0.4.9'
+SRATOM_VERSION       = '0.4.10'
 SRATOM_MAJOR_VERSION = '0'
 
 # Mandatory waf variables
@@ -48,7 +48,7 @@ def configure(conf):
     autowaf.check_pkg(conf, 'lv2', uselib_store='LV2',
                       atleast_version='1.8.1', mandatory=True)
     autowaf.check_pkg(conf, 'serd-0', uselib_store='SERD',
-                      atleast_version='0.14.0', mandatory=True)
+                      atleast_version='0.23.0', mandatory=True)
     autowaf.check_pkg(conf, 'sord-0', uselib_store='SORD',
                       atleast_version='0.12.0', mandatory=True)
 
